codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__deepseek_status_line_api_balance.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"                                                                                "
"› Ask DCode to do anything                                                      "
"                                                                                "
"  deepseek-v4-flash default · /tmp/project · Balance CNY 110.00, USD 2.50       "
